ipc/ipdl/test/ipdl/error/undefSelfRecUnion.ipdl
//error: union `X' is only partially defined

union X { X; };

[ChildProc=any]
protocol undefSelfRecUnion {
child: async __delete__(X x);
};
